# tagstudier

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: mdbook.yml  release.yml  release_manual.yml
.sqlx/: query-75ba3a35ebe31a1480938597952c159f7d71ec5dd573b77443dd34ea92208a75.json
docs/: book.toml
docs/src/: CommandLineHelp.md  SUMMARY.md  entry.md  pixiv_config.md
docs/src/folder_config/: config_file.md
scripts/: generate_help.sh  sqlx_prepare.sh
src/: client.rs  constants.rs  error.rs  main.rs
src/apis/pixiv/: mod.rs  tag_on_pixiv.rs
src/apis/pixiv/models/: illust_tag_tag.rs  mod.rs
src/cli/: autosort.rs  download.rs  download_bookmarks.rs  link_urls.rs  manage_folders.rs  merge_entries.rs  merge_tags.rs  mod.rs  rename_tag.rs  tag_import.rs
src/cli/mv/: mod.rs
src/exts/: mod.rs  path.rs  sqlx_ext.rs
src/exts/tagstudio_db_ext/: entry.rs  library.rs  mod.rs
src/interface/tracing/: file_format.rs  mod.rs
src/models/: mod.rs  tag.rs
src/models/api_framework/: api_request.rs  client_task.rs  http_client.rs  mod.rs
src/models/cli_utils/: cli_data.rs  mod.rs
src/models/config/: auto_sort.rs  mod.rs
src/models/config/folders/: folder_rule.rs  mod.rs
src/models/pixiv/: api_requests.rs  http_clients.rs  mod.rs  pixiv_entry.rs  special_tags.rs  utils.rs
src/models/pixiv/api/: bookmark_item.rs  bookmark_response.rs  illust_body.rs  illust_pages.rs  illust_tag.rs  illust_urls.rs  mod.rs  pixiv_response.rs
src/models/pixiv/cache/: illust_data_cache.rs  illust_pages.rs  mod.rs
src/models/pixiv/download_tasks/: download_new.rs  mod.rs
src/models/pixiv/models/: mod.rs  pixiv_illust.rs  pixiv_page.rs
src/models/suggest_tag/: enum_question.rs  mod.rs
src/models/tag_providers/pixiv/: mod.rs
src/tests/: data.rs
src/utils/: cli_parser.rs  mod.rs
src/utils/constants/: mod.rs
src/utils/tracing/: mod.rs
