[package]
name = "tagstudier"
version = "0.1.0"
edition = "2024"

[dependencies]
tagstudio_db = { path = "../tagstudio_db" }
sequelles = "0.1.0"
thiserror = "2.0.12"
chrono = "0.4.41"
serde_json = "1.0.140"
reqwest = { version = "0.12.12", features = ["json"] }

# Async 
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "parking_lot", "macros"] }
futures = "0.3.31"
streamies = "0.2.2"

# Clap
clap = { version = "4.5.41", features = [
    "unicode",
    "wrap_help",
    "derive",
    "color",
] }
clap_complete = "4.5.55"
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
#clap-markdown = "0.1.5"

# Tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
tracing-indicatif = "0.3.11"
owo-colors = "4.2.1"

# Others
directories = "6.0.0"
regex = "1.11.1"
serde = "1.0.219"
