[package]
name = "tagstudier"
version = "0.1.0"
edition = "2024"

[dependencies]
#tagstudio_db = { path = "../tagstudio_db" }
# tagstudio_db = { git  = "https://github.com/RustyNova016/tagstudio_db" }
tagstudio_db = "0.4.0"
sequelles = "0.1.0"
thiserror = "2.0.12"
chrono = "0.4.41"
serde_json = "1.0.140"
reqwest = { version = "0.12.12", features = ["json", "cookies"] }

# Async 
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "parking_lot", "macros"] }
futures = "0.3.31"
streamies = "0.2.2"

# Clap
clap = { version = "4.5.41", features = [
    "unicode",
    "wrap_help",
    "derive",
    "color",
] }
clap_complete = "4.5.55"
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
clap-markdown = "0.1.5"

# Tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
tracing-indicatif = "0.3.11"
indicatif = "0.18.0"
owo-colors = "4.2.1"

# Others
directories = "6.0.0"
regex = "1.11.1"
serde = "1.0.219"
governor = "0.10.0"
sqlx = "0.8.6"
tracing-test = "0.2.5"
itertools = "0.14.0"
image = "0.25.6"
extend = "1.2.0"
color-eyre = "0.6.5"
sorted-vec = "0.8.7"
async-fn-stream = "0.2.2"
toml = "0.9.5"
retry = "2.1.0"

[features]
default = []
unstable = []

[patch.crates-io]
tagstudio_db = { git  = "https://github.com/RustyNova016/tagstudio_db.git" }